--- a/challenges/pingpong/package.json
+++ b/challenges/pingpong/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yams",
+  "name": "pingpong",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "reactstrap": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
